CHANGELOG METADATA STANDARDS
================================
	* Survey
		- Changed id to long_name
		- Changed name to short_name
		- Changed location to geographic_location
		
	* Station
		- nested lat, lon, elevation, declination under location
		
	* Run
	
	* Channel
	
	* Electric
	
	* Magnetic
	