@@ -1,5 +1,5 @@
 attribute,type,required,style,units
 rating,int,FALSE,number,none
-warning_notes,str,FALSE,name,none
+warning_comments,str,FALSE,name,none
 warning_flags,str,FALSE,name,none
 author,str,FALSE,name,none
