@@ -1,2 +1,2 @@
 attribute,type,required,style,units
-notes,str,FALSE,name,none
+comments,str,FALSE,name,none
