@@ -1,16 +1,16 @@
 attribute,type,required,style,units
 sta_code,str,TRUE,name,
 name,str,TRUE,name,
-start,str,TRUE,name,
-end,str,TRUE,name,
-notes,str,False,name,
+time_period.start,str,TRUE,date_time,
+time_period.end,str,TRUE,date_time,
+comments,str,False,name,
 num_channels,int,TRUE,name,
 channels_recorded,str,TRUE,name,
 data_type,str,TRUE,name,
 station_orientation,str,True,name,
 orientation_method,str,False,name,
 provenance.creation_time,str,TRUE,name,
-provenance.notes,str,TRUE,name,
+provenance.comments,str,TRUE,name,
 provenance.log,str,TRUE,name,
 provenance.software.author,str,True,name,
 provenance.software.version,str,True,name,
